Version 3.1 (X X, 2018) - ""
------------------------------------------------------------------------------
*** CORE/CPU ***
Fix wrong gain/volume of voices/sound effects in Sound Mode 1 (i.e. builtin alternate sound file support)
Further improve M114 sound core (Mr. Game)
Added save credits support for Bow & Arrow

*** ROM SUPPORT *** Thanks to Destruk, ipdb.org, inkochnito, Chad Hendrickson, John Mohr
New:
Mirco: Lucky Draw
Williams: Bigfoot R0.1 (FreeWPC based rewrite of White Water)

Kinda new:
Baywatch 4.01 (unofficial MOD)
Hook 5.01 (unofficial MOD)

Correct Dumps:
Capcom: Kingpin 1.05 Beta (simple rename of kpv106 to kpb105)
Williams: Mousin' Around! LA-4 (now uses the 'real' L2 sound roms. As this matches the LX-1 set then, LX-1 was removed from PinMAME)

Clones:
AC/DC 1.70.0,1.70.0LE
Baby Pac-Man (Vidiot U9 ROM Update 891-16 per Service-Bulletin dated July 11 1983)
Bow & Arrow (Prototype rev. 22)
Earthshaker PA-4
Embryon v92 (7-digit conversion and more)
Frontier (Gate Fix)
Galaxy (Planet Skillshot)
Meteor (No Background Sound)
Spider-Man 2.62 (bootleg with replaced music)



Version 3.0 (December 24th, 2017) - "11 years in the making"
------------------------------------------------------------------------------
*** GENERAL ***
Extend and update some parts of the .txt documentation files

*** CORE/CPU ***
Add support for the Stern S.A.M. platform (e.g. Stern releases from 2006-2014), special thanks for improvements to the community, notably to Arngrim, CarnyPriest and especially DJRobX
Correct SP0256 speech for IDSA games (needs additional sp0256-al2.bin file to work (for Basketball and V-1, only the latter features speech though))
Fix reset / NMI handling for IDSA V-1
Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
Fix Rescue 911 (and maybe more: SFII, WCS, Shaq, mZOIS?) DMD brightness level mapping regression
Improve Punky Willy sound emulation